fixed image overlapping issue

--- a/src/components/wrapper/Wrapper.css
+++ b/src/components/wrapper/Wrapper.css
@@ -10,7 +10,6 @@
 }
 
 .card:hover {
-  cursor: pointer;
   transform: scale(1.1);
 } 
 
@@ -18,6 +17,10 @@
   width: 80%;
   height: 80%;
 }
+
+.img-container {
+  overflow: hidden !important;
+} 
 
 .card .img-container:hover > img {
   width: 80%;
